# signify

./: .gitignore  Makefile.am  README  configure.ac  helper.c  portability.patch  sha2.c  sha256hl.c  sha512_256hl.c  sha512hl.c  signify.c  update.sh
